<resources>
    <string name="app_name">Phones</string>
    <string name="deletedAllPhonesMessage">Deleted all phones</string>
    <string name="phoneDeletedMessage">Phone deleted</string>
    <string name="textViewExampleProducer">Example producer</string>
    <string name="textViewExampleModel">Example model</string>
    <string name="textViewProducer">Producer</string>
    <string name="textViewModel">Model</string>
    <string name="textViewAndroidVersion">Android version</string>
    <string name="textViewWebsite">Web site</string>
    <string name="buttonTextWebsite">WEB SITE</string>
    <string name="buttonTextCancel">CANCEL</string>
    <string name="buttonTextSave">SAVE</string>
    <string name="buttonTextUpdate">UPDATE</string>
    <string name="textIsEmptyAnnouncement">This field cannot be empty</string>
    <string name="cannotSavePhoneMessage">Cannot save the phone. Invalid data provided</string>
    <string name="cannotUpdatePhoneMessage">Cannot update the phone. Invalid data provided</string>
    <string name="cannotGoToWebsiteMessage">Cannot go to website. Check if URI is in proper format</string>
    <string name="newPhoneAddedMessage">New phone added</string>
    <string name="phoneUpdatedMessage">Phone updated</string>
    <string name="cancelledMessage">Cancelled</string>
</resources>