<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPhoneActivity">

    <TableLayout
        android:id="@+id/tableLayoutAddPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:stretchColumns="1"
        app:layout_constraintBottom_toTopOf="@id/linearLayoutAddPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp">

            <TextView
                android:id="@+id/textViewAddPhoneProducer"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:text="@string/textViewProducer"
                android:gravity="center_vertical"
                />

            <EditText
                android:id="@+id/editTextAddPhoneProducer"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:inputType="text"
                android:text=""
                android:autofillHints="@string/textViewProducer"
                android:hint="@string/textViewProducer"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="48dp">

            <TextView
                android:id="@+id/textViewAddPhoneModel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:text="@string/textViewModel"
                android:gravity="center_vertical"/>

            <EditText
                android:id="@+id/editTextAddPhoneModel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:inputType="text"
                android:text=""
                android:autofillHints="@string/textViewModel"
                android:hint="@string/textViewModel"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="48dp">

            <TextView
                android:id="@+id/textViewAddPhoneVersion"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:text="@string/textViewAndroidVersion"
                android:gravity="center_vertical"/>

            <EditText
                android:id="@+id/editTextAddPhoneVersion"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:text=""
                android:autofillHints="@string/textViewAndroidVersion"
                android:hint="@string/textViewAndroidVersion" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:minHeight="48dp">

            <TextView
                android:id="@+id/textViewAddPhoneWebsite"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:text="@string/textViewWebsite"
                android:gravity="center_vertical"/>

            <EditText
                android:id="@+id/editTextAddPhoneWebsite"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:inputType="textUri"
                android:text=""
                android:autofillHints="@string/textViewWebsite"
                android:hint="@string/textViewWebsite"/>
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/linearLayoutAddPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tableLayoutAddPhone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="8dp"
        >

        <Button
            android:id="@+id/buttonWebsite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonTextWebsite"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonTextCancel"
            android:layout_margin="4dp"
            />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonTextSave"
            android:layout_margin="4dp"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>