<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdatePhoneActivity">

    <TableLayout
        android:id="@+id/tableLayoutUpdatePhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:stretchColumns="1"
        app:layout_constraintBottom_toTopOf="@id/linearLayoutUpdatePhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp">

            <TextView
                android:id="@+id/textViewUpdatePhoneProducer"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:text="@string/textViewProducer"
                android:gravity="center_vertical"
                />

            <EditText
                android:id="@+id/editTextUpdatePhoneProducer"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:inputType="text"
                android:text=""
                android:autofillHints="@string/textViewProducer"
                android:hint="@string/textViewProducer"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="48dp">

            <TextView
                android:id="@+id/textViewUpdatePhoneModel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:text="@string/textViewModel"
                android:gravity="center_vertical"/>

            <EditText
                android:id="@+id/editTextUpdatePhoneModel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:inputType="text"
                android:text=""
                android:autofillHints="@string/textViewModel"
                android:hint="@string/textViewModel"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="48dp">

            <TextView
                android:id="@+id/textViewUpdatePhoneVersion"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:text="@string/textViewAndroidVersion"
                android:gravity="center_vertical"/>

            <EditText
                android:id="@+id/editTextUpdatePhoneVersion"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:text=""
                android:autofillHints="@string/textViewAndroidVersion"
                android:hint="@string/textViewAndroidVersion" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:minHeight="48dp">

            <TextView
                android:id="@+id/textViewUpdatePhoneWebsite"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:text="@string/textViewWebsite"
                android:gravity="center_vertical"/>

            <EditText
                android:id="@+id/editTextUpdatePhoneWebsite"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:inputType="textUri"
                android:text=""
                android:autofillHints="@string/textViewWebsite"
                android:hint="@string/textViewWebsite"/>
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/linearLayoutUpdatePhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tableLayoutUpdatePhone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="8dp"
        >

        <Button
            android:id="@+id/buttonUpdatePhoneWebsite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonTextWebsite"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/buttonUpdatePhoneCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonTextCancel"
            android:layout_margin="4dp"
            />

        <Button
            android:id="@+id/buttonUpdatePhoneUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonTextUpdate"
            android:layout_margin="4dp"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>